# djangox

./: README.md  pyproject.toml
config/: settings.py  urls.py
snacks/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
snacks/migrations/: 0001_initial.py
staticfiles/: staticfiles.json
templates/pages/: home.html
templates/snacks/: snack_create.html  snack_delete.html  snack_detail.html  snack_list.html  snack_update.html
